--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "tsc && nodemon dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "node server.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
