--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "tsc && nodemon dist/server.js",
+    "start": "tsc && node server.ts",
+    "dev": "tsx watch server.ts",
     "deploy": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -13,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^18.11.19",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -24,6 +26,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.2",
     "typescript": "^4.9.5"
   }
 }
