--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/cameron-poehner/to-do#readme",
   "dependencies": {
+    "@mui/icons-material": "^5.11.0",
     "if-env": "^1.0.4"
   }
 }
