--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "^18.0.0",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
